--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-kagglehub 
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-plotly
-imbalanced-learn
-joblib
-google-generativeai
+kagglehub==0.3.5 
+pandas==2.2.2 
+numpy==1.26.4 
+matplotlib==3.8.0 
+seaborn==0.13.2 
+scikit-learn==1.5.2 
+plotly==5.24.1 
+imbalanced-learn==0.12.4 
+joblib==1.4.2 
+"google-generativeai==0.8.3" dotenv
