--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ scikit-learn==1.5.2
 plotly==5.24.1 
 imbalanced-learn==0.12.4 
 joblib==1.4.2 
-"google-generativeai==0.8.3" dotenv
+google-generativeai==0.8.3
